--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "assignment-3",
+  "name": "assignment-5",
   "version": "1.0.0",
   "description": "",
   "main": "./dist/server.js",
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/mongoose": "^5.11.97",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -23,6 +24,7 @@
     "http-status": "^1.7.4",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.0",
+    "path": "^0.12.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
